app/src/main/java/com/example/phone/utility/network/errors/CryptoNotAccepted.java
package com.example.phone.utility.network.errors;

/**
 * Exception thrown if a given API does not accept a given cryptocurrency
 */
public final class CryptoNotAccepted extends Exception {
}
